--- a/css/style.css
+++ b/css/style.css
@@ -304,7 +304,7 @@ header {
     background-color: var(--white);
     border-top: solid 1px var(--main-color);
     box-shadow: 1px 1px 1px 1px var(--main-color);
-    z-index: 5;
+    z-index: 1000;
     
 }
 
@@ -641,7 +641,9 @@ main {
 }
 
 main h4 {
+    margin-top: 30px;
     font-size: 1.4rem;
+    text-transform: uppercase;
 }
 
 .objective-content {
@@ -1554,6 +1556,7 @@ input[type=submit]:hover {
     background-color: var(--white);
     border: solid 1px var(--main-color);
     text-align: center;
+    position: relative;
 }   
 
 .d-id-g1 { /* Grid Item */
@@ -1575,23 +1578,19 @@ input[type=submit]:hover {
 
 
 .rainbow {
-    margin-top: 30px;
-    display: flex;
-    align-items: center;
-    width: 100%;
-    height: 60px;
-    border-radius: 10px;
-    border: solid 1px var(--main-color);
-    background:linear-gradient(90deg, red, orange, yellow, green, blue, purple);
+    position: absolute;
+    margin-top: 20px;
+    height: 80px;  
+    width: 80px;
+    right: 10px;
+    bottom: 10px;
+    border-radius: 7px;
 }
 
-.rainbow span {
-    margin: auto;
-    color: black;
-    font-weight: bold;
-}
 
-.digital-id-content img{
+
+
+.id-logo{
     width: 100%;
     border-radius: 10px; 
 }
@@ -1633,6 +1632,10 @@ input[type=submit]:hover {
 
     .digital-id-content {
         width: 95%;
+    }
+
+    .d-id-g2 {
+        margin-bottom: 70px;
     }
 
 }
@@ -1766,4 +1769,58 @@ input[type=submit]:hover {
         padding: 7px 10px;
         font-size: 1rem;
     }
+}
+
+/*==========================Checkout Styling =====================*/
+
+.center-paypal {
+    margin-top: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.checkout-wrapper {
+    min-height: 60vh;
+}
+
+/*==========================Report Styling =====================*/
+
+.report-wrapper {
+    display: grid;
+    grid-template-columns: 10% 1fr 1fr 10%;
+    grid-template-rows: 50px auto auto auto ;
+    width: 100vw;
+}
+
+.report-top {  /*======  Grid item 1 =======*/
+    grid-column: 2/ span 2;
+    border-bottom: solid 1px var(--main-color);
+    padding-left: 50px;
+}
+
+.report-form-wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+}
+
+.report-form {
+    text-align: center;
+    width: 50%;
+    margin: 30px 0px;
+    padding: 40px 30px;
+    border-radius: 10px;
+    background-color: var(--main-color); 
+    color: var(--white);
+}
+
+.report-form .row {
+    margin: 30px 0px;
+}
+
+.report-form h1 {
+    color: var(--white);
+    text-transform: uppercase;
 }
