--- a/css/style.css
+++ b/css/style.css
@@ -536,12 +536,13 @@ display: none;
 position: fixed;
 bottom: 20px;
 right: 30px;
-z-index: 99;
+z-index: 999;
 font-size: 18px;
 border: none;
 outline: none;
 background-color: var(--main-color);
 color: var(--white);
+border: solid 1px var(--white);
 cursor: pointer;
 padding: 15px;
 border-radius: 4px;
@@ -1823,4 +1824,111 @@ input[type=submit]:hover {
 .report-form h1 {
     color: var(--white);
     text-transform: uppercase;
+}
+
+
+.report-display-wrapper {
+    height: 60vh;
+    padding: 20px 0 60px 0;
+    display: flex;
+    justify-content: center;
+    align-items: top;
+    
+}
+
+.report-display-content {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    width: 80%; 
+    background-color: var(--main-color);
+    border-radius: 10px;
+    padding: 10px 30px 10px 30px;
+}
+
+.report-display-content p{
+    color: var(--white);
+    padding: 20px 10px;
+    font-size: 1.5rem;
+}
+
+.report-display-content span {
+    font-size: 1.6rem;
+    font-weight: bolder;
+    color: black;
+    text-transform: uppercase;
+
+}
+
+.report-data {
+    padding-top: 30px;
+    width: 100%;
+    text-align: center;
+}
+.report-data h1 {
+    text-transform: uppercase;
+    color: var(--main-color);
+}
+
+.report-display-content button {
+    background-color: var(--white);
+    color: var(--main-color);
+    text-transform: uppercase;
+    padding: 10px 20px;
+    border: double 3px var(--main-color);
+    border-radius: 8px;
+    margin-top: 25px;
+}
+
+.report-display-content button:hover {
+    cursor: pointer;
+    opacity: .7;
+}
+
+
+@media screen and (max-width: 800px) {
+    .report-display-content p{
+        font-size: 1rem;
+    }
+    
+    .report-display-content span {
+        font-size: 1.1rem;
+    }
+
+    .report-display-content {
+        width: 95%; 
+        padding: 10px 5px 10px 5px;
+    }
+
+    .report-form {
+        width: 75%;
+    }
+
+    .report-top .breadcrumb li a {
+        font-size: .7rem;
+    }
+
+    .report-top {
+        padding-left: 25px;
+    }
+}
+
+@media screen and (max-width: 550px) {
+    .report-display-content p{
+        font-size: .6rem;
+    }
+    
+    .report-display-content span {
+        font-size: .7rem;
+    }
+
+    .report-form {
+        width: 95%;
+    }
+
+    .report-top {
+        padding-left: 8px;
+    }
+
 }
